tests/errors/multiple_variable_declaration/same_type.meth
int x = 4;
int x = 6;